order-service gRPC, REST-gateway и Swagger
